objects/vlocity_ins__InsuranceClaimInvoice__c.object
<CustomObject>
    <description>Manages invoices submitted by a service provider to the insurance company for the services rendered against a claim. Invoices can be for services of many types such as auto-body repair, home repair, physician office or hospital visits. Master-detail child object of Claim.</description>
    <fields>
        <fullName>vlocity_ins__AmountDue__c</fullName>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingPartyName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Claim Invoices</relationshipLabel>
        <relationshipName>ClaimInvoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvoiceDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Claim Invoice</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>